fix: signin signup changes

--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0",
         "vue": "^3.2.41"
+    },
+    "dependencies": {
+        "moment": "^2.29.4",
+        "momentum-modal": "^0.2.1",
+        "vue3-snackbar": "^2.1.7"
     }
 }
