--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.14",
+        "@heroicons/vue": "^2.0.18",
         "moment": "^2.29.4",
         "momentum-modal": "^0.2.1",
         "vue3-snackbar": "^2.1.7"
